# Haske-stellerV2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-frontend.yml
crates/access_token/: Cargo.toml
crates/access_token/src/: compact.rs  lib.rs  sign.rs  token.rs  verify.rs
crates/api_server/: Cargo.toml
crates/api_server/src/: main.rs
crates/api_server/src/routes/: payment.rs
crates/api_server/src/services/: access_service.rs  payment_service.rs  watcher_service.rs
crates/lightning_adapter/: Cargo.toml
crates/lightning_adapter/src/: lib.rs
crates/lightning_node/: Cargo.toml
crates/lightning_node/src/: main.rs  qr.rs
crates/lightning_node/src/layers/: access.rs  funding.rs  lightning.rs  mod.rs  proof.rs
crates/payment_core/: Cargo.toml
crates/payment_core/src/: lib.rs
crates/qr/: Cargo.toml
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/stellar_adapter/src/: parser.rs  provider.rs
crates/verifier_cli/: Cargo.toml
crates/verifier_cli/src/: main.rs
data/ldk-node/: keys_seed
data/ldk-node-daemon/: keys_seed
docs/: architecture.md  github_issues_backlog.md
haske-ui/: README.md  package-lock.json  package.json  vite.config.js
haske-ui/src/: index.css
haske-ui/src/api/: apiClient.ts
haske-ui/src/components/: AccessPass.jsx  Countdown.jsx  Header.jsx  LoadingSkeleton.jsx  QRBlock.jsx  StatusIndicator.jsx  TrustBadge.jsx
haske-ui/src/pages/: Checkout.jsx
haske-ui/src/store/: usePaymentStore.ts
web/: checkout.html  plan.html
