[package]
name = "lightning_adapter"
version = "0.1.0"
edition = "2021"
description = "HASKEpay Bitcoin Lightning payment adapter for invoice creation and settlement checks."
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
payment_core = { path = "../payment_core" }
rand = { workspace = true }
serde_json = { workspace = true }
shared_types = { path = "../shared_types" }
tokio = { workspace = true }
