[package]
name = "lightning_node"
version = "0.1.0"
edition = "2021"
default-run = "lightning_node"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
access_token = { path = "../access_token" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
image = { workspace = true }
qrcode = { workspace = true, features = ["image"] }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
breez-sdk-core = { workspace = true }
async-trait = { workspace = true }
