[package]
name = "qr"
version = "0.1.0"
edition = "2021"
description = "QR rendering helpers for HASKEpay Lightning invoices and access passes."
license = "MIT"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
qrcode = { workspace = true, features = ["image"] }
